<resources>
    <string name="app_name">Friendly Chat</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="eat_menu">Eateries</string>
    <string name="dial_menu">Transport</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    //choose
    <string name="translate">Translate</string>
    <string name="transport">Transport</string>
    <string name="chat">Chat</string>
    <string name="eateries">Eateries</string>
    <string name="attractions">Attractions</string>
    <string name="translate_btn_string">Translate</string>
    <string name="paste_clipboard_btn_string">Paste Text from Clipboard</string>
    //notification
    <string name="channel_name">Channel</string>
    <string name="channel_description">Notifs</string>
    <string-array name="supported_translations">
        <item>Select language</item>
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
        <item>Deutsch</item>
        <item>Português (Portugal)</item>
        <item>Russian</item>
        <item>Irish</item> //new inserted langs by me
        <item>Italian</item>
        <item>Polish</item>
        <item>Swedish</item>
        <item>Hindi</item>
        <item>Japanese</item>
        <item>Kannada</item>
        <item>Korean</item>
        <item>Malyalam</item>
        <item>Marathi</item>
        <item>Punjabi</item>
        <item>Tamil</item>
        <item>Telegu</item>
        <item>Urdu</item>
        <item>Chinese(simplified)</item>
        <item> Bengali</item>
    </string-array>
    <!--intro-->

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Chat</string>
    <string name="slide_1_desc">The easiest way to interact with localites!</string>

    <string name="slide_2_title">Translate</string>
    <string name="slide_2_desc">Use the translate feature for an enhanced travel experience!</string>

    <string name="slide_3_title">Attractions and Food</string>
    <string name="slide_3_desc">View top attractions and famous food outlets in the city!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
