<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/fresh_config_menu"
        android:title="View Attractions"
        app:showAsAction="never"/>
    <item
        android:id="@+id/invite_menu"
        android:title="@string/invite_menu_label"/>
    <item
        android:id="@+id/crash_menu"
        android:title="Translate"/>
    <item
        android:id="@+id/eat_menu"
        android:title="@string/eat_menu"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/dial_menu"
        android:title="Transport"
        app:showAsAction="never"
        />
</menu>
